# phosphor

./: .gitignore  CLAUDE.md  Cargo.toml  chart_demo.md  test_slides.md  todos.md
data/: accuracy.csv  channel_counts.csv  daq_throughput.csv  loss.csv  model_comparison.csv  signal_background.csv  training_loss.csv
examples/: demo.md
examples/data/: languages.csv  performance.csv
src/: app.rs  braille.rs  chart.rs  cli.rs  diagram.rs  elements.rs  halfblock.rs  input.rs  main.rs  metadata.rs  notes_app.rs  parse.rs  slide.rs  testfire.rs  transition.rs  wireframe.rs
src/notes/: client.rs  protocol.rs  server.rs
src/render/: engine.rs  lower.rs  mod.rs  ops.rs
src/theme/: loader.rs  mod.rs  types.rs
talks/fsu-hep-seminar-2025-04-24/: outline.md  slides.md
talks/fsu-hep-seminar-2025-04-24/data/: dirac_calibration.csv  dirac_training_loss.csv  inference_convergence.csv  overhead_time.csv
themes/: phosphor.yaml  synthwave.yaml  ultra-dark.yaml
