[package]
name = "phosphor"
version = "0.1.0"
edition = "2024"
description = "A terminal slide deck presentation tool built on ratatui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
comrak = "0.36"
csv = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
rand = "0.9"
image = "0.25.10"

[dev-dependencies]
insta = "1"
tempfile = "3"
